# agentgsd

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.agentgsd/commands/: agents.md  commit.md  prime.md  review.md  test.md
docs/: API.md  CLI.md  PROVIDERS.md  README.md  SKILLS.md  TOOLS.md
shared/: __init__.py
shared/api/: __init__.py  client.py
shared/commands/: __init__.py
shared/config/: __init__.py  settings.py
shared/indexer/: __init__.py
shared/skills/: __init__.py  loader.py
shared/tools/: __init__.py  base.py  file_tools.py  git_tools.py  indexer_tools.py  search_tools.py  shell_tools.py  web_tools.py
shared/ui/: __init__.py  completer.py  enhanced.py  keybindings.py  layout.py  prompts.py
shared/utils/: __init__.py  colors.py  formatters.py
shared/workflows/: __init__.py  corrector.py  engine.py  planner.py  thoughts.py
skills/agent-browser-cli/: SKILL.md
skills/ai-code-slop-removal/: SKILL.md
skills/claude-blog-browser/: SKILL.md
skills/code-review/: SKILL.md
skills/flask-apps/: SKILL.md
skills/playwright-cli/: SKILL.md
skills/skill-creator/: SKILL.md
