[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgsd-monorepo"
version = "1.0.0"
description = "Elite AI coding assistant with terminal UI powered by OpenRouter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgentGSD Team", email = "team@agentgsd.dev"}
]
keywords = ["ai", "coding", "assistant", "openrouter", "llm", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "prompt_toolkit>=3.0.0",
    "urllib3>=2.0.0",
    "ddgs>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentgsd = "packages.agentgsd.main:main"

[project.urls]
Homepage = "https://github.com/agentgsd/agentgsd"
Repository = "https://github.com/agentgsd/agentgsd"
Documentation = "https://docs.agentgsd.dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "shared*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
